[workspace]

members = [
    "image-to-text",
    "ecs",
    "vector",
    "procgen",
    "rand-range",
    "game",
    "app",
    "native",
    "graphical",
    "ansi-terminal",
    "web",
]

[profile.release]
lto = true

[patch.crates-io]
chargrid_render = { git = "https://github.com/stevebob/chargrid" }
chargrid_input = { git = "https://github.com/stevebob/chargrid" }
chargrid_app = { git = "https://github.com/stevebob/chargrid" }
chargrid_graphical = { git = "https://github.com/stevebob/chargrid" }
chargrid_graphical_gfx = { git = "https://github.com/stevebob/chargrid" }
chargrid_ansi_terminal = { git = "https://github.com/stevebob/chargrid" }
chargrid_web = { git = "https://github.com/stevebob/chargrid" }
chargrid_event_routine = { git = "https://github.com/stevebob/chargrid" }
chargrid_decorator = { git = "https://github.com/stevebob/chargrid" }
chargrid_text = { git = "https://github.com/stevebob/chargrid" }
chargrid = { git = "https://github.com/stevebob/chargrid" }
wgpu_glyph = { git = "https://github.com/hecrj/wgpu_glyph", rev = "5fc683fabaaacf924abaf5fa0da08ab3b91a03ed" }
