[workspace]

members = [
    "image-to-text",
    "vector",
    "procgen",
    "rand-range",
    "game",
    "app",
    "native",
    "graphical",
    "ansi-terminal",
    "web",
]

[profile.release]
lto = true

[patch.crates-io]
# I forked rodio to fix a bug where the dedicated audio thread overflows its stack when the track changes.
# PR to fix this issue is here: https://github.com/RustAudio/rodio/pull/285
rodio = { git = "https://github.com/stevebob/rodio.git", branch = "fix-frame-drop-stack-overflow-2021-pinned-cpal" }
