[package]
name = "slime99_ansi_terminal"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[dependencies]
slime99_native = { path = "../native" }
slime99_app = { path = "../app" }
env_logger = "0.7"
rand = "0.7"
chargrid_ansi_terminal = { version = "0.1", features = ["gamepad"] }
