[package]
name = "slime99_app"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[features]
native = ["general_audio_static/native", "general_storage_static/file"]
web = ["general_audio_static/web", "general_storage_static/web", "getrandom/js"]

[dependencies]
slime99_game = { path = "../game" }
log = "0.4"
chargrid = { version = "0.4", features = ["serialize", "gamepad"] }
general_storage_static = { version = "0.1", features = ["bincode", "json"] }
general_audio_static = "0.3"
serde = { version = "1.0", features = ["serde_derive"] }
rand = "0.8"
rand_isaac = { version = "0.3", features = ["serde1"] }
line_2d = "0.5"
direction = { version = "0.18", features = ["serialize", "rand"] }
maplit = "1.0"
getrandom = "0.2"
