[package]
name = "slime99_game"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[dependencies]
log = "0.4"
grid_2d = { version = "0.15", features = ["serialize"] }
direction = { version = "0.18", features = ["serialize"] }
serde = { version = "1.0", features = ["serde_derive"] }
rand = "0.8"
rand_isaac = { version = "0.3", features = ["serde1"] }
line_2d = { version = "0.5", features = ["serialize"] }
rgb24 = { version = "0.3", features = ["serialize", "rand"] }
entity_table = { version = "0.2", features = ["serialize"] }
spatial_table = { version = "0.3", features = ["serialize"] }
vector = { path = "../vector" }
rational = { path = "../rational" }
rand_range = { path = "../rand-range" }
procgen = { path = "../procgen" }
shadowcast = { version = "0.8", features = ["serialize"] }
grid_search_cardinal = { version = "0.3", features = ["serialize"] }
