[package]
name = "slime99_graphical"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[features]
default = ["prototty_graphical"]
force_vulkan = ["prototty_graphical/force_vulkan"]
force_dedicated_audio_thread = ["slime99_native/force_dedicated_audio_thread"]

[dependencies]
env_logger = "0.7"
prototty_graphical = { version = "0.29", optional = true }
prototty_graphical_gfx = { version = "0.29", optional = true }
slime99_prototty = { path = "../prototty" }
slime99_native = { path = "../native" }
