[package]
name = "slime99_graphical"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[features]
force_vulkan = ["chargrid_graphical/force_vulkan"]
force_dedicated_audio_thread = ["slime99_native/force_dedicated_audio_thread"]

[dependencies]
slime99_app = { path = "../app" }
slime99_native = { path = "../native" }
env_logger = "0.7"
chargrid_graphical = "0.2"
