[package]
name = "slime99_native"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[features]
force_dedicated_audio_thread = ["prototty_native_audio/force_dedicated_audio_thread"]

[dependencies]
log = "0.4"
simon = "0.3"
serde_json = "1.0"
slime99_prototty = { path = "../prototty" }
prototty_file_storage = { version = "0.29"}
prototty_native_audio = { version = "0.29"}
