[package]
name = "slime99_native"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[features]
force_dedicated_audio_thread = ["general_audio_static/native_force_dedicated_audio_thread"]

[dependencies]
slime99_app = { path = "../app", features = ["native"] }
log = "0.4"
simon = "0.3"
serde_json = "1.0"
general_storage_static = { version = "0.1", features = ["file"] }
general_audio_static = { version = "0.1", features = ["native"] }
