[package]
name = "rip_prototty"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[features]
wasm = ["rand/wasm-bindgen"]

[dependencies]
prototty = { version = "0.28", features = ["serialize"] }
prototty_storage = { version = "0.28", features = ["bincode"] }
prototty_audio = "0.28"
rip = { path = "../rip" }
serde = { version = "1.0", features = ["serde_derive"] }
hashbrown = { version = "0.6", features = ["serde"] }
rand = "0.7"
rand_isaac = { version = "0.2", features = ["serde1"] }
line_2d = "0.4"
direction = { version = "0.17", features = ["serialize", "rand"] }
