[package]
name = "slime99_prototty"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[features]
wasm = ["rand/wasm-bindgen"]

[dependencies]
log = "0.4"
prototty = { version = "0.29", features = ["serialize"] }
prototty_storage = { version = "0.29", features = ["bincode", "json"] }
prototty_audio = { version = "0.29" }
game = { path = "../game" }
serde = { version = "1.0", features = ["serde_derive"] }
rand = "0.7"
rand_isaac = { version = "0.2", features = ["serde1"] }
line_2d = "0.4"
direction = { version = "0.17", features = ["serialize", "rand"] }
maplit = "1.0"
