[package]
name = "slime99_web"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
slime99_app = { path = "../app", features = ["wasm"]}
chargrid_web = "0.1"
general_storage_web = "0.1"
general_audio_web = "0.1"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wasm-logger = "0.2"
log = "0.4"
