[package]
name = "slime99_web"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
slime99_app = { path = "../app", features = ["web"]}
chargrid_web = { version = "0.1" }
general_storage_static = { version = "0.1", features = ["web"] }
general_audio_static = { version = "0.2", features = ["web"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wasm-logger = "0.2"
log = "0.4"
